# Youtube-Video-Downloader

./: .gitignore  CREDITS.md  GEMINI.md  LICENSE  README.md  pyproject.toml  requirements.txt
UIX/: downloader_engine.py  main.py  quality_checker.py
UIX/view/: main_view.py  quality_view.py  type_view.py
