[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-downloader-uix"
version = "1.0.0"
authors = [
  { name="Yeliel", email="your-email@example.com" },
]
description = "A modern graphical application for downloading YouTube videos"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "yt-dlp",
    "ttkbootstrap",
    "Pillow",
]

[project.urls]
"Homepage" = "https://github.com/your-account/youtube-downloader"

[tool.setuptools.packages.find]
where = ["."]
include = ["UIX*"]
